# mailprobe

./: .gitignore  README.md  dev-start.sh  dev-stop.sh  docker-compose.dev.yml  docker-compose.yml  email_patterns.py  main.py  requirements.txt  sheets.py  utils.py  validate.sh  verifier.py
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_job_log_lines.py  003_add_job_lead_id.py  004_create_job_log_lines.py  005_add_job_log_line_visibility.py  006_create_workspace_configs.py  007_add_smtp_mail_from_to_workspace_configs.py  008_workspace_config_key_value.py  009_add_lead_web_mentioned.py  010_lead_verification_status_pending.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api_keys.py  auth.py  config.py  exports.py  i18n.py  jobs.py  leads.py  optout.py  router.py  usage.py  verify.py  webhooks.py  workspaces.py
backend/app/core/: config.py  database.py  error_codes.py  log_codes.py  log_constants.py  log_service.py  security.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  idempotency.py  job.py  job_log_line.py  lead.py  optout.py  plan.py  usage.py  user.py  verification_log.py  webhook.py  workspace.py  workspace_config_entry.py
backend/app/schemas/: auth.py  common.py  config.py  lead.py  optout.py  verify.py  webhook.py
backend/app/services/: email_patterns.py  serper_usage.py  smtp_blocked_detector.py  usage_plan.py  utils.py  verifier.py  workspace_config.py
backend/app/tasks/: celery_app.py  exports.py  retention.py  verify.py  webhooks.py
backend/scripts/: create_workspace.py  truncate_historic_tables.sql
backend/tests/: conftest.py  factories.py  mocks.py  test_api.py  test_email_patterns.py  test_error_codes.py  test_leads_flow.py  test_smtp_blocked_detector.py  test_verification_flow.py
(+97 files in other folders)
