[project]
name = "mailprobe-backend"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "PLR2004", # magic-value-comparison (no magic numbers/strings)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "W292",   # no newline at end of file (cosmetic, avoids unnecessary commits)
    "B008",   # function call in default argument (FastAPI Depends)
    "SIM105", # contextlib.suppress - sometimes try/except is clearer
    "SIM108", # ternary operator - sometimes if/else is more readable
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # Allow magic numbers in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
